--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@splinetool/runtime": "^0.9.493",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.61",
     "@types/react": "^18.2.37",
+    "@types/react-bootstrap": "^0.32.35",
     "@types/react-dom": "^18.2.15",
+    "bootstrap": "^5.3.2",
+    "compose-function": "^3.0.3",
+    "firebase": "^10.6.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-router": "^6.18.0",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.69.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/compose-function": "^0.0.33",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
