--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-native-firebase/app": "^18.6.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@splinetool/runtime": "^0.9.493",
     "@testing-library/jest-dom": "^5.17.0",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
+    "scss": "^0.2.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
