--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/firestore": "^4.3.2",
     "@react-native-firebase/app": "^18.6.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@splinetool/runtime": "^0.9.493",
